test-cases/valid/reject/missing_parameter.ul
void main() {
    int __secret_value;
    __secret_value = foo(1, true, 'c', "hello"); // Missing last parameter
}

int foo(int i, boolean b, char c, string s, int missing) {
    if (b) {
        print s;
    }
    else {
        print c;
    }

    return (i + missing) * 10;
}